modification des pages html version1

--- a/ChwaPa-n/about.html
+++ b/ChwaPa-n/about.html
@@ -4,7 +4,7 @@
 <html lang="en" class="no-js">
 
 <head>
-	<title>Convertible</title>
+	<title>Chwa pan'</title>
 
 	<meta charset="utf-8">
 
@@ -56,24 +56,18 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 
-							<li class="drop"><a href="index.html">Home</a>
+							<li><a href="index.html">Acceuil</a>
+							
+							</li>
+							<li class="drop"><a href="menu.html">Menu</a>
 								<ul class="drop-down">
-									<li><a href="index.html">Home Default</a></li>
-									<li><a href="home-shop.html">Home Shop</a></li>
-									<li><a href="home-portfolio.html">Home Portfolio</a></li>
-									<li><a href="home-blog.html">Home blog</a></li>
-									<li><a href="single-page.html">Single Page</a></li>
-									<li><a href="home-boxed.html">Home Boxed</a></li>
+								<li><a href="index.html">Planning chez nous et dans le monde</a></li>
+									<li><a href="flexslider.html">Planning et religion</a></li>
+									<li><a href="flexslider.html">Methode de planning</a></li>
 								</ul>
 							</li>
-							<li class="drop"><a href="index.html">Sliders</a>
-								<ul class="drop-down">
-									<li><a href="index.html">Revolution slider</a></li>
-									<li><a href="flexslider.html">Flexslider</a></li>
-								</ul>
-							</li>
-							<li><a class="active" href="about.html">About Us</a></li>
-							<li class="drop"><a href="blog-right-sidebar.html">Blog</a>
+							<li><a class="active" href="about.html">A propos</a></li>
+							<li class="drop"><a href="blog-right-sidebar.html">Forum</a>
 								<ul class="drop-down">
 									<li><a href="blog-one-col.html">Blog 1col</a></li>
 									<li><a href="blog-two-col.html">Blog 2col</a></li>
@@ -82,21 +76,8 @@
 									<li><a href="blog-nosidebar.html">Blog no sidebar</a></li>
 								</ul>
 							</li>
-							<li class="drop"><a href="portfolio-4col.html">Portfolio</a>
-								<ul class="drop-down">
-									<li><a href="portfolio-2col.html">Portfolio 2col</a></li>
-									<li><a href="portfolio-3col.html">Portfolio 3col</a></li>
-									<li><a href="portfolio-4col.html">Portfolio 4col</a></li>
-								</ul>
-							</li>
-							<li><a href="shop.html">Shop</a></li>
-							<li class="drop"><a href="#">Pages</a>
-								<ul class="drop-down">
-									<li><a href="single-post.html">Single Post</a></li>
-									<li><a href="single-project.html">Single Project</a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact Us</a></li>
+						
+							<li><a href="contact.html">Contactez-nous</a></li>
 
 						</ul>
 					</div>
@@ -125,7 +106,7 @@
 					<div class="row">
 						<div class="col-md-4">
 							<div class="about-us-text">
-								<h3>Who we are</h3>
+								<h3>Qui sommes-nous?</h3>
 								<div class="innner-box">
 									<img alt="" src="upload/about.jpg">
 									<p><span>Lorem Ipsum </span> Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit duis set odio sit amet nibh vulputate cursus Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas</p>							
@@ -173,13 +154,13 @@
 			<!-- staff-box -->
 			<div class="staff-box vers2">
 				<div class="container">
-					<h3>Our Staff</h3>
+					<h3>Notre equipe</h3>
 					<div class="row">
 
 						<div class="col-md-3">
 							<div class="staff-post">
 								<div class="staff-post-content">
-									<h5>Owen Miller</h5>
+									<h5>LADOUCEUR LYSE</h5>
 									<span>manager</span>
 								</div>
 								<div class="staff-post-gal">
@@ -199,7 +180,7 @@
 						<div class="col-md-3">
 							<div class="staff-post">
 								<div class="staff-post-content">
-									<h5>Owen Miller</h5>
+									<h5>LAGUERRE MedgiinaVellie</h5>
 									<span>manager</span>
 								</div>
 								<div class="staff-post-gal">
@@ -219,7 +200,7 @@
 						<div class="col-md-3">
 							<div class="staff-post">
 								<div class="staff-post-content">
-									<h5>Owen Miller</h5>
+									<h5>DUGUE  Thodly</h5>
 									<span>manager</span>
 								</div>
 								<div class="staff-post-gal">
@@ -239,7 +220,7 @@
 						<div class="col-md-3">
 							<div class="staff-post">
 								<div class="staff-post-content">
-									<h5>Owen Miller</h5>
+									<h5>ALCINDOR Amanda</h5>
 									<span>manager</span>
 								</div>
 								<div class="staff-post-gal">
@@ -256,95 +237,6 @@
 							</div>
 						</div>
 
-					</div>
-				</div>
-			</div>
-
-			<div class="pricing-box">
-				<div class="container">
-					<h3>Our Pricings</h3>
-					<div class="row">
-
-						<div class="col-md-4">
-							<ul class="pricing-table basic">
-								<li class="title">
-									<p>Basic</p>
-									<span>$10,99/month</span>
-								</li>
-								<li>
-									<p>10GB Disk Space</p>
-								</li>
-								<li>
-									<p>100GB Monthly Bandwidth</p>
-								</li>
-								<li>
-									<p>20 Email Accounts</p>
-								</li>
-								<li>
-									<p>1 Domain</p>
-								</li>
-								<li>
-									<p>1 Subdomain</p>
-								</li>
-								<li>
-									<a href="#">Order Now</a>
-								</li>
-							</ul>
-						</div>
-
-						<div class="col-md-4">
-							<ul class="pricing-table standard">
-								<li class="title">
-									<p>Standard</p>
-									<span>$29,99/month</span>
-								</li>
-								<li>
-									<p>50GB Disk Space</p>
-								</li>
-								<li>
-									<p>500GB Monthly Bandwidth</p>
-								</li>
-								<li>
-									<p>50 Email Accounts</p>
-								</li>
-								<li>
-									<p>10 Domain</p>
-								</li>
-								<li>
-									<p>5 Subdomain</p>
-								</li>
-								<li>
-									<a href="#">Order Now</a>
-								</li>
-							</ul>
-						</div>
-
-						<div class="col-md-4">
-							<ul class="pricing-table basic">
-								<li class="title">
-									<p>Professional</p>
-									<span>$50,99/month</span>
-								</li>
-								<li>
-									<p>Unlimited Disk Space</p>
-								</li>
-								<li>
-									<p>Unlimited Monthly Bandwidth</p>
-								</li>
-								<li>
-									<p>200 Email Accounts</p>
-								</li>
-								<li>
-									<p>Unlimited Domain</p>
-								</li>
-								<li>
-									<p>Unlimited Subdomain</p>
-								</li>
-								<li>
-									<a href="#">Order Now</a>
-								</li>
-							</ul>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -471,7 +363,7 @@
 
 						<div class="col-md-3">
 							<div class="widget footer-widgets info-widget">
-								<h4>Contact Us</h4>
+								<h4>Contactez-nous</h4>
 								<ul class="contact-list">
 									<li><a class="phone" href="#"><i class="fa fa-phone"></i>9930 1234 5679</a></li>
 									<li><a class="mail" href="#"><i class="fa fa-envelope"></i> contact@yourdomain.com</a></li>
@@ -492,7 +384,7 @@
 
 			<div class="footer-line">
 				<div class="container">
-					<p>&#169; 2013 Convertible,  All Rights Reserved</p>
+					<p>&#169; 2017 Chwa pan',  Tous droits reservés</p>
 					<a class="go-top" href="#"></a>
 				</div>
 			</div>
