--- a/ChwaPa-n/contact.html
+++ b/ChwaPa-n/contact.html
@@ -4,7 +4,7 @@
 <html lang="en" class="no-js">
 
 <head>
-	<title>Convertible</title>
+	<title>Chwa pan'</title>
 
 	<meta charset="utf-8">
 
@@ -57,24 +57,17 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 
-							<li class="drop"><a href="index.html">Home</a>
+							<li class="drop"><a href="index.html">Acceuil</a>
+							</li>
+							<li class="drop"><a href="index.html">Menu</a>
 								<ul class="drop-down">
-									<li><a href="index.html">Home Default</a></li>
-									<li><a href="home-shop.html">Home Shop</a></li>
-									<li><a href="home-portfolio.html">Home Portfolio</a></li>
-									<li><a href="home-blog.html">Home blog</a></li>
-									<li><a href="single-page.html">Single Page</a></li>
-									<li><a href="home-boxed.html">Home Boxed</a></li>
+								<li><a href="index.html">Planning chez nous et dans le monde</a></li>
+									<li><a href="flexslider.html">Planning et religion</a></li>
+									<li><a href="flexslider.html">Methode de planning</a></li>
 								</ul>
 							</li>
-							<li class="drop"><a href="index.html">Sliders</a>
-								<ul class="drop-down">
-									<li><a href="index.html">Revolution slider</a></li>
-									<li><a href="flexslider.html">Flexslider</a></li>
-								</ul>
-							</li>
-							<li><a href="about.html">About Us</a></li>
-							<li class="drop"><a href="blog-right-sidebar.html">Blog</a>
+							<li><a href="about.html">A propos</a></li>
+							<li class="drop"><a href="blog-right-sidebar.html">Forum</a>
 								<ul class="drop-down">
 									<li><a href="blog-one-col.html">Blog 1col</a></li>
 									<li><a href="blog-two-col.html">Blog 2col</a></li>
@@ -83,21 +76,7 @@
 									<li><a href="blog-nosidebar.html">Blog no sidebar</a></li>
 								</ul>
 							</li>
-							<li class="drop"><a href="portfolio-4col.html">Portfolio</a>
-								<ul class="drop-down">
-									<li><a href="portfolio-2col.html">Portfolio 2col</a></li>
-									<li><a href="portfolio-3col.html">Portfolio 3col</a></li>
-									<li><a href="portfolio-4col.html">Portfolio 4col</a></li>
-								</ul>
-							</li>
-							<li><a href="shop.html">Shop</a></li>
-							<li class="drop"><a href="#">Pages</a>
-								<ul class="drop-down">
-									<li><a href="single-post.html">Single Post</a></li>
-									<li><a href="single-project.html">Single Project</a></li>
-								</ul>
-							</li>
-							<li><a class="active" href="contact.html">Contact Us</a></li>
+							<li><a class="active" href="contact.html">Contactez-nous</a></li>
 
 						</ul>
 					</div>
@@ -113,10 +92,10 @@
 			<!-- Page Banner -->
 			<div class="page-banner">
 				<div class="container">
-					<h2>Contact Us</h2>
+					<h2>Contactez-nous</h2>
 					<ul class="page-tree">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#">Acceuil</a></li>
+						<li><a href="#">Contactez-nous</a></li>
 					</ul>		
 				</div>
 			</div>
@@ -284,7 +263,7 @@
 
 			<div class="footer-line">
 				<div class="container">
-					<p>&#169; 2013 Convertible,  All Rights Reserved</p>
+					<p>&#169; 2017 Chwa pan',  Tous droits reservés</p>
 					<a class="go-top" href="#"></a>
 				</div>
 			</div>
