--- a/ChwaPa-n/about.html
+++ b/ChwaPa-n/about.html
@@ -56,7 +56,7 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 
-							<li><a href="index.html">Acceuil</a>
+							<li><a href="index.php">Acceuil</a>
 							
 							</li>
 							<li class="drop"><a href="menu.html">Menu</a>
