--- a/ChwaPa-n/menu.html
+++ b/ChwaPa-n/menu.html
@@ -84,7 +84,7 @@
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
 
-							<li><a class="active" href="index.html">Acceuil</a>
+							<li><a class="active" href="index.html">Accueil</a>
 							</li>
 							<li class="drop"><a href="menu.html">Menu</a>
 								<ul class="drop-down">
